<resources>

    <string name="app_name">RBC-SCANNER</string>

    <string name="front_text_1_Morning">Good Morning</string>
    <string name="front_text_1_Evening">Good Evening</string>
    <string name="blank">Good *******</string>

    <string name="front_text_2">What would you like to scan?</string>
    <string name="button_ean">CLICK TO SCAN</string>

    <string name="lamp_emoji">💡</string>
    <string name="back_button">BACK</string>

    <string name="skanuj_produkt">SKANUJ PRODUKT</string>
    <string name="Panel_Primary_Text">**** ***** **** ********</string>
    <string name="Panel_Text_Trash">🗑 *****</string>
    <string name="Panel_Text_Recycling">🛢️ *****</string>
    <string name="Panel_Text_Srodowisko">🌻 *****</string>
    <string name="Panel_Text_Zamienniki">🔆 *****</string>
    <string name="todo">TODO</string>
</resources>